# svg_plotter

./: .gitignore  CMakeLists.txt  svg_plotter.cpp
examples/: fill_lines.js  fill_spiral.js  render_example.html
examples/mesh/: arc.blend  arc.stl  greenland.stl  greenland_fill.js  greenland_fill.stl  greenland_foreground.js  itsfive.stl
examples/mesh/drinks/anis/: anis_drink_bottom.stl  anis_glass_base.stl  anis_glass_edge.stl  anis_glass_highlight.stl  anis_glass_shadow.stl  anis_top_glass.stl
examples/webgl/: brush-strokes.frag  brush-strokes.vert  drawing.frag  drawing.vert  index.html  index.js  mesh-test.frag  mesh-test.vert  stroke_test.js  style.css  webgl-utils.js
include/: adapters.hpp  attribute_mesh.hpp  bezier.hpp  bounding_box.hpp  cover.hpp  drawable.hpp  drawable_list.hpp  fan_path.hpp  fill_mesh.hpp  fills.hpp  formatters.hpp  forward_deps.hpp  json_writer.hpp  mesh.hpp  pairwise_range.hpp  parser.hpp  path.hpp  path_lib.h  plot_cover.hpp  plotter.hpp  point.hpp  samplers.hpp  shape.hpp  stroke.hpp  stroke_mesh.hpp  svg.hpp  svg_path.hpp  testing.hpp  utility.hpp
include/output/: c.hpp  csv.hpp  json.hpp  json_mesh.hpp  obj.hpp  output.hpp  stl.hpp
src/: CMakeLists.txt  adapters.cpp  bezier.cpp  cover.cpp  drawable.cpp  fill_mesh.cpp  fills.cpp  mesh.cpp  parser.cpp  path.cpp  path_lib.cpp  plot_cover.cpp  plotter.cpp  point.cpp  stroke.cpp  stroke_mesh.cpp  svg_path.cpp  svg_plotter.cpp  utility.cpp
src/output/: output.cpp
test/: CMakeLists.txt  stl_converter.cpp  test_adapters.cpp  test_filler.cpp  test_line.cpp  test_mesh.cpp  test_mesh_cover.cpp  test_parser.cpp  test_plotter.cpp  test_point.cpp  test_ray_intersect.cpp  test_shape.cpp  test_shape_output.cpp  test_svg_path.cpp
wasm/drinks/: Makefile  drinks.c
wasm/include/: drawing.h  khrplatform.h  mesh.h  solid.h
wasm/public/: arc.wasm  drawing.js  greenland.wasm  index.html  index2.html  itsfive_solid.wasm
wasm/public/js/: app.js  attribute.js  blend.js  blender.js  dataarray.js  drawing.js  drink.js  index.js  layer.js  painter.js  shader.js  solid.js  stroke.js  uniform.js  utility.js
wasm/public/js/v2/: drawing.js
wasm/public/shaders/: blend.fragment  blend.vertex  draw.fragment  draw.vertex  hsl.glsl  lower_bound.glsl  solid.fragment  solid.vertex  solid_gradient.fragment  solid_gradient.vertex
wasm/src/: arc.c  canvas.c  drawing.c  greenland-test.c  greenland.c
wasm/test/: Makefile  anis_drink_bottom.c  anis_drink_bottom2.c  background.c  drink_background.c  example_drawing.c  greenland2.c  itsfive_solid.c  oclock_solid.c
